@@ -37,6 +37,66 @@
 #include "sysdep.h"
 #include "minicom.h"
 
+#ifdef __APPLE__
+#include <IOKit/serial/ioss.h>
+#endif
+
+/*
+ * This is for supporting higher baud rates on MacOS.
+ * Reference:
+ * https://github.com/npat-efault/picocom/blob/master/custbaud_bsd.h */
+#ifndef B460800
+#define B460800   460800
+#endif
+#ifndef B500000
+#define B500000   500000
+#endif
+#ifndef B576000
+#define B576000   576000
+#endif
+#ifndef B921600
+#define B921600   921600
+#endif
+#ifndef B1000000
+#define B1000000 1000000
+#endif
+#ifndef B1152000
+#define B1152000 1152000
+#endif
+#ifndef B1500000
+#define B1500000 1500000
+#endif
+#ifndef B2000000
+#define B2000000 2000000
+#endif
+#ifndef B2500000
+#define B2500000 2500000
+#endif
+#ifndef B3000000
+#define B3000000 3000000
+#endif
+#ifndef B3500000
+#define B3500000 3500000
+#endif
+#ifndef B4000000
+#define B4000000 4000000
+#endif
+
+/* On MacOS, setting unusual baudrates (see list above) does not work
+ * through tcsetattr but requires an additional ioctl. Interestingly,
+ * tcgetattr then returns the right baud rate, so we do not need to do
+ * anything there. */
+static void set_speed_apple(int fd, struct termios *p)
+{
+#ifdef __APPLE__
+  speed_t v = cfgetospeed(p);
+  ioctl(fd, IOSSIOSPEED, &v);
+#else
+  (void)fd;
+  (void)p;
+#endif
+}
+
 /* Set hardware flow control. */
 void m_sethwf(int fd, int on)
 {
@@ -56,6 +116,7 @@ void m_sethwf(int fd, int on)
   else
     tty.c_cflag &= ~CRTSCTS;
   tcsetattr(fd, TCSANOW, &tty);
+  set_speed_apple(fd, &tty);
 #endif
 }
 
@@ -110,6 +171,7 @@ void m_dtrtoggle(int fd, int sec)
     tcsetattr(fd, TCSANOW, &tty);
     sleep(sec);
     tcsetattr(fd, TCSANOW, &old);
+    set_speed_apple(fd, &old);
 
 #  else /* POSIX */
 #    ifdef _V7
@@ -242,6 +304,7 @@ void m_restorestate(int fd)
 #endif
 #ifdef POSIX_TERMIOS
   tcsetattr(fd, TCSANOW, &savetty);
+  set_speed_apple(fd, &savetty);
 #else
 #  if defined(_BSD43) || defined(_V7)
   ioctl(fd, TIOCSETP, &sg);
@@ -274,6 +337,7 @@ void m_nohang(int fd)
     tcgetattr(fd, &sgg);
     sgg.c_cflag |= CLOCAL;
     tcsetattr(fd, TCSANOW, &sgg);
+    set_speed_apple(fd, &sgg);
 #else
 #  if defined (_BSD43) && defined(LNOHANG)
     int lsw;
@@ -306,6 +370,7 @@ void m_hupcl(int fd, int on)
     else
       sgg.c_cflag &= ~HUPCL;
     tcsetattr(fd, TCSANOW, &sgg);
+    set_speed_apple(fd, &sgg);
   }
 #endif
 }
@@ -585,6 +650,7 @@ void m_setparms(int fd, char *baudr, char *par, char *bits, char *stopb,
     tty.c_cflag &= ~CSTOPB;
 
   tcsetattr(fd, TCSANOW, &tty);
+  set_speed_apple(fd, &tty);
 
   if (!rs485en)
     m_setrts(fd);
