@@ -9,6 +9,7 @@ New for version x.y:
  - Split "Screen and Keyboard" menu into two menus.
  - Update to gettext-0.21.
  - Change return values of --help and --version to success.
+ - Support higher baud rates on MacOS
  - Update translations: Romanian, German, French, Norwegian/Bookmal, Polish,
                         Serbian
 
